src/recipe/snapshots/rattler_build__recipe__parser__tests__jinja_error.snap
---
source: src/recipe/parser.rs
expression: err
---
  × Failed to parse recipe

Error:   × Parsing: failed to render Jinja expression: unknown function
   ╭─[7:7]
 6 │   host:
 7 │     - ${{ zcompiler('c') }}
   ·       ──────────┬──────────
   ·                 ╰── unknown function: zcompiler is unknown
   ╰────

